[package]
name = "rusty-butler"
version = "0.3.0"
authors = ["Ward Muylaert <ward.muylaert@gmail.com>"]
edition = "2018"

[lib]
name = "rusty_butler_lib"
path = "src/lib.rs"

[[bin]]
name = "rusty-butler-bin"
path = "src/main.rs"

[dependencies]
irc = "0.14"
chrono = "0.4"
regex = "1.3"
reqwest = "= 0.9.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rink = "0.4"
unicode-segmentation = "1.6"
clap = "2.32.0"
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3"
football = { git = "https://github.com/ward/football" }
rand = "0.8"
