[package]
name = "rusty-butler"
version = "0.4.0"
authors = ["Ward Muylaert <ward.muylaert@gmail.com>"]
edition = "2021"

[lib]
name = "rusty_butler_lib"
path = "src/lib.rs"

[[bin]]
name = "rusty-butler-bin"
path = "src/main.rs"

[dependencies]
irc = "0.15"
chrono = "0.4"
regex = "1.5"
reqwest = { version = "0.11.4", features = ["cookies", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# Math stuff
rink-core = "0.6"
unicode-segmentation = "1.7"
clap = "2.33"
# TODO Check I need all these features
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread"] }
# TODO What does this do exactly?
futures = "0.3"
football = { git = "https://github.com/ward/football" }
rand = "0.8"
toml = "0.5"
# Html scraping with css selectors
scraper = "0.12.0"
# Currently no support for async fn in traits, this crate type scrubs stuff with a macro
# Don't quite understand it, but it works
async-trait = "0.1.50"
log = "0.4.0"
env_logger = "0.8.4"
